# Athena-Physics

./: .gitmodules  CMakeLists.txt  LICENSE  README
dependencies/: CMakeLists.txt
include/: CMakeLists.txt
include/Athena-Physics/: Body.h  BoxShape.h  CMakeLists.txt  CapsuleShape.h  CollisionManager.h  CollisionObject.h  CollisionShape.h  CompoundShape.h  ConeShape.h  Config.h.in  Conversions.h  CylinderShape.h  GhostObject.h  PhysicalComponent.h  Prerequisites.h  PrimitiveShape.h  Scripting.h  SphereShape.h  StaticTriMeshShape.h  World.h
scripting/: Body.cpp  CMakeLists.txt  CollisionObject.cpp  CollisionShape.cpp  CompoundShape.cpp  GhostObject.cpp  PhysicalComponent.cpp  PrimitiveShape.cpp  World.cpp  module.cpp
src/: Body.cpp  BoxShape.cpp  CMakeLists.txt  CapsuleShape.cpp  CollisionManager.cpp  CollisionObject.cpp  CollisionShape.cpp  CompoundShape.cpp  ConeShape.cpp  Conversions.cpp  CylinderShape.cpp  GhostObject.cpp  PhysicalComponent.cpp  PrimitiveShape.cpp  Scripting.cpp  SphereShape.cpp  StaticTriMeshShape.cpp  World.cpp  module.cpp  module.cpp.in
